  * Support Windows file://c:/foo URIs in serd_uri_to_path() on all platforms
  * Add serd_node_new_blob and serd_base64_decode for handling arbitrary
    binary data via base64 encoding.
  * Support compilation as C++ under MSVC++.
  * Implement pretty-printing for collections.
  * Parse collections iteratively in O(1) space.
  * Report read error if both "genid" and "docid" IDs are found in the same
    document, to prevent silent merging of distinct blank nodes.
  * Handle files and strings that start with a UTF-8 Byte Order Mark.
  * Add serd_writer_get_env().
  * Add serd_node_new_file_uri() and serd_file_uri_parse() and implement
    proper URI to/from path hex escaping, etc.
  * Add serd_uri_serialise_relative() for making URIs relative to a base
    where possible (by chopping a common prefix and adding dot segments).
  * Make URIs serialised by the writer properly escape characters.
  * Add serd_writer_set_root_uri() and corresponding -r option to serdi to
    enable writing URIs with up references (../).
  * Resolve dot segments in serd_uri_resolve() instead of at write time.

 -- David Robillard <d@drobilla.net>  (UNRELEASED)

serd (0.5.0) unstable; urgency=low

  * Fix pretty printing of successive blank descriptions, i.e. "] , ["
  * Avoid writing illegal Turtle names as a result of URI qualifying
  * Gracefully handle NULL reader sinks
  * Add serd_strerror
  * Add serd_env_set_prefix_from_strings for convenience
  * Fix erroneously equal SERD_ERR_BAD_SYNTAX and SERD_ERR_BAD_ARG
  * Add ability to build static library

 -- David Robillard <d@drobilla.net>  Thu, 29 Sep 2011 00:00:00 -0400

serd (0.4.2) unstable; urgency=low

  * Fix compilation issues on some systems
  * Fix build system Python 3 compatibility

 -- David Robillard <d@drobilla.net>  Wed, 25 May 2011 19:00:00 -0400

serd (0.4.0) unstable; urgency=low

  * Initial release

 -- David Robillard <d@drobilla.net>  Tue, 24 May 2011 23:00:00 -0400